<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_film"
        android:icon="@drawable/ic_film"
        android:title="@string/title_film" />

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/title_tv" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_movie"
        android:title="@string/title_favorite" />

</menu>