...
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="@string/content_not_found"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/search_view_movie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
...
